--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-node_modules
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+client/node_modules/
+server/node_modules/
+
+client/dist/
+client/dist-ssr/
+
+client/.env
+server/.env
+
+.vscode/
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
