--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.26.10",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@react-google-maps/api": "^2.20.6",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
