--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "gensync": "^1.0.0-beta.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
   },
