--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "@react-google-maps/api": "^2.20.6",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
     "firebase": "^11.6.0",
     "gensync": "^1.0.0-beta.2",
