--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.2.0",
-    "mongoose": "^8.12.1",
-    "node-cron": "^3.0.3"
+    "mongoose": "^8.12.1"
   }
 }
